--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 
 [functions]
   directory = "functions/"
-  included_files = ["config.yml"]
+  included_files = ["./config.yml"]
 
 [context.dev]
   command = "env"
