--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,18 @@
-[[plugins]]
-  package = "@helloample/netlify-plugin-replace"
-
-[[plugins]]
-  package = "netlify-plugin-use-env-in-runtime"
-  [plugins.inputs]
-    prefix = "APP"
-
-[functions]
-  directory = "functions/"
-  included_files = ["config.yml"]
 
 [context.dev]
   command = "env"
-  [context.dev.environment]
-    APP_ENV = "DEV"
+
+[context.dev.environment]
+  APP_ENV = "DEV"
 
 [context."feature/fushang318_login"]
   command = "env"
-  [context."feature/fushang318_login".environment]
-    APP_ENV = "DEV"
+
+[context."feature/fushang318_login".environment]
+  APP_ENV = "DEV"
+
+[[plugins]]
+package = "netlify-plugin-use-env-in-runtime"
+  [plugins.inputs]
+    prefix = "APP"
+    def = ["APP_ENV"]
