--- a/netlify.toml
+++ b/netlify.toml
@@ -16,5 +16,5 @@
 [[plugins]]
 package = "netlify-plugin-use-env-in-runtime"
   [plugins.inputs]
-    prefix = "APP"
-    def = ["APP_ENV"]
+    prefix = ""
+    def = ["APP_ENV", "BRANCH"]
