--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[build]
+  command = "make build"
+  publish = "swagger/"
+
 [functions]
-  directory = "functions/"
-  included_files = ["*.yml"]
+  directory = "bin/"
